[refactor] 불변리스트 제거 related to #138